--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,13 @@
 			<version>6.0.0</version>
 			<!-- <version>${zk.version}</version> -->
 		</dependency>
-		 
-		<dependency>
+			<dependency>
+			    <groupId>ch.qos.logback</groupId>
+			    <artifactId>logback-classic</artifactId>
+			    <version>1.1.2</version>
+			    <scope>test</scope>
+			 </dependency>
+			 <dependency>
 			<groupId>org.zkoss.zk</groupId>
 			<artifactId>zul</artifactId>
 			<version>${zk.version}</version>
