--- a/pom.xml
+++ b/pom.xml
@@ -44,14 +44,16 @@
 		<dependency>
 			<groupId>org.zkoss.zk</groupId>
 			<artifactId>zkbind</artifactId>
-			<version>6.0.0</version>
-			<!-- <version>${zk.version}</version> -->
-		</dependency>
-			<dependency>
-			    <groupId>ch.qos.logback</groupId>
-			    <artifactId>logback-classic</artifactId>
-			    <version>0.9.30</version>
-			 </dependency>
+			<version>6.0.0</version> 
+			<!-- <version>${zk.version}</version>  -->
+			</dependency>
+<dependency>
+    <groupId>ch.qos.logback</groupId>
+    <artifactId>logback-classic</artifactId>
+    <version>1.2.1</version>
+    <scope>test</scope>
+</dependency>
+
 			 <dependency>
 			<groupId>org.zkoss.zk</groupId>
 			<artifactId>zul</artifactId>
@@ -151,8 +153,13 @@
 	 <dependency>
 	    <groupId>org.slf4j</groupId>
 	    <artifactId>slf4j-api</artifactId>
-	    <version>1.4.2</version>
+	     <version>1.4.2</version> 
 	</dependency>
+	<!--  <dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-log4j12</artifactId>
+    <version>1.5.8</version>
+</dependency>  -->
 	<!-- Mysql Connector -->
         <dependency>
             <groupId>mysql</groupId>
