--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -27,7 +27,8 @@ log4j.appender.complete.layout=org.apache.log4j.PatternLayout
 log4j.appender.complete.layout.ConversionPattern=%d{ISO8601} %5p [%t] (%C\:%L) - %m%n
 
 log4j.appender.complete1=org.apache.log4j.RollingFileAppender
-log4j.appender.complete1.File=${catalina.home}/logs/ElencoEsperti.log
+#log4j.appender.complete1.File=${catalina.home}/logs/ElencoEsperti.log
+log4j.appender.complete1.File=C:/CCSE/bandiEsperti/logs/elencoEsperti.log
 log4j.appender.complete1.MaxFileSize=3341KB
 log4j.appender.complete1.MaxBackupIndex=15
 log4j.appender.complete1.layout=org.apache.log4j.PatternLayout
