--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
     	</init-param>
     	<init-param>
         	<param-name>redirectUrl</param-name>
-        	<param-value>/ElencoEsperti/pages/BandiEspertiPages/login.zul</param-value>
+        	<param-value>../../pages/BandiEspertiPages/login.zul</param-value>
     	</init-param>
 	</filter>
 	<filter-mapping>
@@ -177,7 +177,7 @@
 	<!-- DSP (optional) -->
 	<!-- Uncomment it if you want to use DSP
 	However, it is turned on since zksandbox uses DSP to generate CSS.
--->	
+
 	<servlet>
 		<servlet-name>dspLoader</servlet-name>
 		<servlet-class>org.zkoss.web.servlet.dsp.InterpreterServlet</servlet-class>
@@ -190,7 +190,7 @@
 		<servlet-name>dspLoader</servlet-name>
 		<url-pattern>*.dsp</url-pattern>
 	</servlet-mapping>
-
+-->	
 	<!-- /////////// -->
 	<!-- Miscellaneous -->
 	<session-config>
